Experementing with objectweb asm