@@ -33,7 +33,6 @@ application  {
 
 compileJava {
     options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
-    options.compilerArgs << "--add-exports=java.base/jdk.internal.org.objectweb.asm=nixiedroid.dynamic.app"
 }
 
 
